--- a/client/src/App.css
+++ b/client/src/App.css
@@ -133,7 +133,7 @@ body {
   top: 90%;
   width: 100%;
   height: 10%;
-  background-color: lightsalmon;
+  background-color: #2c387e;
   display: flex;
   align-items: center;
   justify-content: center;
